--- a/pad/app/build.gradle
+++ b/pad/app/build.gradle
@@ -20,7 +20,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
@@ -30,4 +30,5 @@ dependencies {
     compile 'com.android.support:cardview-v7:25.3.0'
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.rengwuxian.materialedittext:library:2.1.4'
+    compile 'com.github.PhilJay:MPAndroidChart:v3.0.2'
 }
