--- a/pad/app/src/main/AndroidManifest.xml
+++ b/pad/app/src/main/AndroidManifest.xml
@@ -8,15 +8,20 @@
     android:label="@string/app_name"
     android:roundIcon="@mipmap/ic_launcher_round"
     android:supportsRtl="true"
-    android:theme="@style/AppTheme">
-    <activity android:name=".MainActivity">
+    android:theme="@style/AppTheme"
+
+    >
+    <activity android:name=".MainActivity" android:screenOrientation="landscape">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
 
         <category android:name="android.intent.category.LAUNCHER" />
+
       </intent-filter>
     </activity>
-    <activity android:name=".CaseListActivity"/>
+    <activity android:name=".CaseListActivity" android:screenOrientation="landscape"/>
+    <activity android:name=".JujiaActivity" android:screenOrientation="landscape"/>
+
   </application>
 
 </manifest>
