--- a/pad/app/src/main/AndroidManifest.xml
+++ b/pad/app/src/main/AndroidManifest.xml
@@ -8,16 +8,20 @@
     android:maxSdkVersion="25"
     />
   <application
-    android:name=".MyApplication"
+    android:name="com.ainemo.pad.MyApplication"
     android:allowBackup="true"
     android:icon="@mipmap/ic_launcher"
     android:label="@string/app_name"
     android:roundIcon="@mipmap/ic_launcher_round"
     android:supportsRtl="true"
     android:theme="@style/AppTheme"
-
     >
-    <activity android:name=".MainActivity" android:screenOrientation="landscape">
+
+    <meta-data
+      android:name="NEMO_OPENAPI_APPID"
+      android:value="BNNFKUVNNNVNT" />
+
+    <activity android:name="com.ainemo.pad.MainActivity" android:screenOrientation="landscape">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
 
@@ -25,14 +29,14 @@
 
       </intent-filter>
     </activity>
-    <activity android:name=".CaseListActivity" android:screenOrientation="landscape"/>
-    <activity android:name=".JujiaActivity" android:screenOrientation="landscape"/>
-    <activity android:name=".CaseDetailActivity" android:screenOrientation="landscape"/>
-    <activity android:name=".DoctorActivity" android:screenOrientation="landscape"/>
+    <activity android:name=".Case.CaseListActivity" android:screenOrientation="landscape"/>
+    <activity android:name=".Jujia.JujiaActivity" android:screenOrientation="landscape"/>
+    <activity android:name=".Case.CaseDetailActivity" android:screenOrientation="landscape"/>
+    <activity android:name=".Case.DoctorActivity" android:screenOrientation="landscape"/>
 
+    <activity android:name=".Contact.ChangeContactActivity" android:screenOrientation="landscape"/>
     <activity android:name=".Contact.ContactActivity" android:screenOrientation="landscape"/>
 
-    <activity android:name=".Contact.New_Contactor" android:screenOrientation="landscape"/>
   </application>
 
 </manifest>
