--- a/pad/app/build.gradle
+++ b/pad/app/build.gradle
@@ -1,12 +1,20 @@
 apply plugin: 'com.android.application'
 
 android {
+    signingConfigs {
+        config {
+            keyAlias 'key0'
+            keyPassword 'cxw123456'
+            storeFile file('C:/Users/XW/lastKey.jks')
+            storePassword 'cxw123456'
+        }
+    }
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
     defaultConfig {
         applicationId "com.ainemo.pad"
         minSdkVersion 17
-        targetSdkVersion 25
+        targetSdkVersion 17
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -33,8 +41,6 @@ dependencies {
     compile 'com.github.PhilJay:MPAndroidChart:v3.0.2'
     compile 'com.android.support:recyclerview-v7:25.3.0'
     compile 'com.android.support:design:25.3.0'
-
     compile 'org.litepal.android:core:1.5.1'
     compile 'com.github.thinkcool:circletextimageview:1.0.20151218'
-
 }
