--- a/pad/app/src/main/AndroidManifest.xml
+++ b/pad/app/src/main/AndroidManifest.xml
@@ -1,45 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="com.ainemo.pad">
+    package="com.ainemo.pad">
 
-  <uses-sdk
-    android:minSdkVersion="17"
-    android:targetSdkVersion="17"
-    android:maxSdkVersion="25"
-    />
-  <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-  <uses-permission android:name="android.permission.INTERNET"/>
-  <application
-    android:name="com.ainemo.pad.MyApplication"
-    android:allowBackup="true"
-    android:icon="@mipmap/ic_launcher"
-    android:label="@string/app_name"
-    android:roundIcon="@mipmap/ic_launcher_round"
-    android:supportsRtl="true"
-    android:theme="@style/AppTheme"
-    >
+    <uses-sdk
+        android:maxSdkVersion="25"
+        android:minSdkVersion="17"
+        android:targetSdkVersion="17" />
 
-    <meta-data
-      android:name="NEMO_OPENAPI_APPID"
-      android:value="G8KI2L2KZ4CNRV5LEO5JDG==" />
+    <uses-permission android:name="android.permission.READ_CALL_LOG" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.WRITE_CONTACTS" />
+    <uses-permission android:name="android.permission.WRITE_CALL_LOG" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
-    <activity android:name="com.ainemo.pad.MainActivity" android:screenOrientation="landscape">
-      <intent-filter>
-        <action android:name="android.intent.action.MAIN" />
+    <application
+        android:name="com.ainemo.pad.MyApplication"
+        android:allowBackup="true"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:roundIcon="@mipmap/ic_launcher_round"
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme">
 
-        <category android:name="android.intent.category.LAUNCHER" />
+        <meta-data
+            android:name="NEMO_OPENAPI_APPID"
+            android:value="G8KI2L2KZ4CNRV5LEO5JDG==" />
 
-      </intent-filter>
-    </activity>
-    <activity android:name=".Jujia.PersonStatusActivity" android:screenOrientation="landscape"/>
-    <activity android:name=".Case.CaseListActivity" android:screenOrientation="landscape"/>
-    <activity android:name=".Jujia.JujiaActivity" android:screenOrientation="landscape"/>
-    <activity android:name=".Case.CaseDetailActivity" android:screenOrientation="landscape"/>
-    <activity android:name=".Case.DoctorActivity" android:screenOrientation="landscape"/>
+        <activity
+            android:name="com.ainemo.pad.MainActivity"
+            android:screenOrientation="landscape">
 
-    <activity android:name=".Contact.ChangeContactActivity" android:screenOrientation="landscape"/>
-    <activity android:name=".Contact.ContactActivity" android:screenOrientation="landscape"/>
-    <activity android:name=".Jujia.BaojingActivity" android:screenOrientation="landscape"/>
-  </application>
+        </activity>
+        <activity
+            android:name=".Jujia.PersonStatusActivity"
+            android:screenOrientation="landscape" />
+        <activity
+            android:name=".Case.CaseListActivity"
+            android:screenOrientation="landscape" />
+        <activity
+            android:name=".Jujia.JujiaActivity"
+            android:screenOrientation="landscape" />
+        <activity
+            android:name=".Case.CaseDetailActivity"
+            android:screenOrientation="landscape" />
+        <activity
+            android:name=".Case.DoctorActivity"
+            android:screenOrientation="landscape" />
+
+        <activity
+            android:name=".Contact.ChangeContactActivity"
+            android:screenOrientation="landscape" />
+        <activity
+            android:name=".Contact.ContactActivity"
+            android:screenOrientation="landscape" />
+        <activity
+            android:name=".Jujia.BaojingActivity"
+            android:screenOrientation="landscape" />
+    </application>
 
 </manifest>
