--- a/pad/app/src/main/AndroidManifest.xml
+++ b/pad/app/src/main/AndroidManifest.xml
@@ -31,7 +31,10 @@
         <activity
             android:name="com.ainemo.pad.MainActivity"
             android:screenOrientation="landscape">
-
+            <intent-filter >
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
         </activity>
         <activity
             android:name=".Jujia.PersonStatusActivity"
