修改了医生显示的病例列表

--- a/pad/app/src/main/AndroidManifest.xml
+++ b/pad/app/src/main/AndroidManifest.xml
@@ -61,6 +61,8 @@
         <activity
             android:name=".Jujia.BaojingActivity"
             android:screenOrientation="landscape" />
+        <activity android:name=".Case.DoctorListActivity"
+            android:screenOrientation="landscape"/>
     </application>
 
 </manifest>
